# shad-demo

./: CMakeLists.txt  batch.sh
include/demo/: reader.h
src/: async-hello-shad.cc  hello-shad.cc  reader.cc  tc.cc
